# JiraSeleniumCucumberTestNG-MCP

./: .env.example  .gitignore  README.md  copilot-instructions.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
jira_mcp/: __init__.py  jira_service.py  server.py  test_generator.py
